Fixed z-index for floating button

--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -1831,6 +1831,7 @@
 
   display: none;
   position: fixed;
+  z-index: 5;
   right: 100px;
   bottom: 150px;
   width: 80px;
